[package]
name = "mainline-dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
ansi_term = {}
serde_bencoded = "0.3.1"
serde = {version = "1.0", features = ["derive"]}